// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#@@iterator() 1`] = `1`;

exports[`#@@iterator() 2`] = `1`;

exports[`#@@iterator() 3`] = `2`;

exports[`#@@iterator() 4`] = `2`;

exports[`#@@iterator() 5`] = `3`;

exports[`#@@iterator() 6`] = `3`;

exports[`#next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`#next() 2`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`#next() 3`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`#next() 4`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`#next() 5`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`#next() 6`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`#next() 7`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
